# cppdnn

./: .gitignore  CMakeLists.txt  activation.cpp  activation.hpp  batchnormalization.cpp  batchnormalization.hpp  binarize.hpp  binaryfullyconnected.cpp  binaryfullyconnected.hpp  convolution2d.cpp  convolution2d.hpp  cppmnist.hpp  fullyconnected.cpp  fullyconnected.hpp  layer.hpp  loss.cpp  loss.hpp  main.cpp  mnist.cpp  mnist_bnn.cpp  mnist_dense.cpp  mnist_lenet.cpp  network.cpp  network.hpp  note  pooling2d.cpp  pooling2d.hpp  util.hpp
